--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://yourwebsite.com/" />
+    <meta property="og:url" content="https://tourland.uz/" />
     <meta property="og:title" content="Tour Land - Your Path to Global Adventures!" />
     <meta property="og:description" content="Tour Land offers the best travel experiences for global explorers. Join us and discover the world's most beautiful places!" />
     <meta property="og:image" content="https://yourwebsite.com/tour-land-image.jpg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://yourwebsite.com/" />
+    <meta property="twitter:url" content="https://tourland.uz/" />
     <meta property="twitter:title" content="Tour Land - Your Path to Global Adventures!" />
     <meta property="twitter:description" content="Tour Land offers the best travel experiences for global explorers. Join us and discover the world's most beautiful places!" />
-    <meta property="twitter:image" content="https://yourwebsite.com/tour-land-image.jpg" />
+    <meta property="twitter:image" content="https://tourland.uz/tour-land-image.jpg" />
 
     <!-- Additional SEO Meta Tags -->
     <meta name="robots" content="index, follow" />
@@ -40,6 +40,28 @@
   </head>
   <body>
     <div id="root"></div>
+
+    <!-- Noscript section for users without JavaScript -->
+    <noscript>
+      <strong>tourland</strong>
+    </noscript>
+	<noscript>
+		<strong>tour land</strong>
+	</noscript>
+	<noscript>
+		<strong>Tourland</strong>
+	</noscript>
+	<noscript>
+		<strong>Tour land</strong>
+	</noscript>
+	<noscript>
+		<strong>Muhammadyusuf</strong>
+	</noscript>
+	
+	
+	
+
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
