--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		<strong>Tour land</strong>
 	</noscript>
 	<noscript>
-		<strong>Muhammadyusuf</strong>
+		<strong>asdfghjkl</strong>
 	</noscript>
 	
 	
